Учтены требования по первому ревью